--- a/src/pages/care-plan/su-create.html
+++ b/src/pages/care-plan/su-create.html
@@ -145,8 +145,8 @@
 
         <vaadin-combo-box
           allow-custom-value
-          label="Partership Status"
-          items="[[parterShipStatuses]]"
+          label="Partnership Status"
+          items="[[partnerShipStatuses]]"
           value="{{newPatientData.partnership}}"
           tabindex="7"
           required
@@ -242,7 +242,7 @@
           ]
         },
 
-        parterShipStatuses: {
+        partnerShipStatuses: {
           type: Array,
           value: [
             'Single',
