--- a/src/elements/guuey-photo-editor/guuey-photo-editor.html
+++ b/src/elements/guuey-photo-editor/guuey-photo-editor.html
@@ -4,7 +4,7 @@
 <link rel="import" href="../../../bower_components/iron-icons/av-icons.html" />
 <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html" />
 <link rel="import" href="../../../bower_components/paper-dialog/paper-dialog.html" />
-
+<link rel="import" href="../../../bower_components/paper-tooltip/paper-tooltip.html" />
 <link rel="import" href="dialog-no-style.html" />
 <!--
 `guuey-photo-editor`
@@ -209,13 +209,20 @@ optional cropHeight and cropWidth properties to set the crop dimensions
       </div>
 
       <div class="toolbar">
-        <paper-icon-button class="edit-button" icon="image:add-a-photo" on-tap="change"></paper-icon-button>
-        <paper-icon-button class="edit-button" icon="image:rotate-left" on-tap="rotateLeft"></paper-icon-button>
-        <paper-icon-button class="edit-button" icon="image:rotate-right" on-tap="rotateRight"></paper-icon-button>
-        <paper-icon-button class="edit-button" icon="image:crop" on-tap="crop"></paper-icon-button>
-        <paper-icon-button class="edit-button" icon="icons:save" on-tap="save"></paper-icon-button>
-        <paper-icon-button class="edit-button" icon="av:fast-rewind" on-tap="reset"></paper-icon-button>
-        <paper-icon-button class="edit-button" icon="icons:cancel" on-tap="cancel"></paper-icon-button>
+        <paper-icon-button id="addImageButton" class="edit-button" icon="image:add-a-photo" on-tap="change"></paper-icon-button>
+        <paper-icon-button id="rotateLeftButton" class="edit-button" icon="image:rotate-left" on-tap="rotateLeft"></paper-icon-button>
+        <paper-icon-button id="rotateRightButton" class="edit-button" icon="image:rotate-right" on-tap="rotateRight"></paper-icon-button>
+        <paper-icon-button id="cropImageButton" class="edit-button" icon="image:crop" on-tap="crop"></paper-icon-button>
+        <paper-icon-button id="saveImageButton" class="edit-button" icon="icons:save" on-tap="save"></paper-icon-button>
+        <paper-icon-button id="resetImageButton" class="edit-button" icon="av:fast-rewind" on-tap="reset"></paper-icon-button>
+        <paper-icon-button id="cancelEditButton" class="edit-button" icon="icons:cancel" on-tap="cancel"></paper-icon-button>
+        <paper-tooltip for="addImageButton">add image</paper-tooltip>
+        <paper-tooltip for="rotateLeftButton">rotate image left 90 degrees</paper-tooltip>
+        <paper-tooltip for="rotateRightButton">rotate image right 90 degrees</paper-tooltip>
+        <paper-tooltip for="cropImageButton">crop image</paper-tooltip>
+        <paper-tooltip for="saveImageButton">save image</paper-tooltip>
+        <paper-tooltip for="resetImageButton">revert to original image</paper-tooltip>
+        <paper-tooltip for="cancelEditButton">cancel edits and close</paper-tooltip>
       </div>
 
       <div id="overlay" class="overlay">
