--- a/src/pages/admin/ad-payment.html
+++ b/src/pages/admin/ad-payment.html
@@ -465,7 +465,7 @@
           this._loadStripe();
         },
         ready:function(){
-          this.fire("pageLoaded", this.page);
+          this.fire("pageLoaded",{page: this.page});
           this.$.suIndexDB.query.once("value")
           .then(function(data){
             this._computeUserCount(data.val());
