--- a/src/pages/test/test-test.html
+++ b/src/pages/test/test-test.html
@@ -30,7 +30,7 @@
         is: 'test-test',
 
         ready:function(){
-          this.fire("pageLoaded", this.page);
+          this.fire("pageLoaded",{page: this.page});
         },
 
         properties:{
